<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_inmueble">Propiedades</string>
    <string name="menu_inquilino">Inquilinos</string>
    <string name="menu_pago">Pagos</string>
    <string name="menu_propietario">Mi perfil</string>
    <string name="menu_contrato">Contratos</string>
    <string name="menu_close">Salir</string>

    <string name="propietario_edit">EDITAR DATOS DE USUARIO</string>

</resources>
